name:                haskebase64
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskebase64#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskebase64
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3
                     , split >= 0.2.3.2
                     , base64-string >= 0.2
                     , process >= 1.4.3
                     , aeson >= 1.1.2
                     , aeson-pretty >= 0.8.5
                     , monad-par >= 0.3.4.8
                     , parsec >= 3.1.11
                     , parallel >= 3.2.1.1
                     , zlib >= 0.6.1.2
                     , bytestring >= 0.10.8.1
                     , unordered-containers >= 0.2.8.0
                     , text >= 1.2.2.2
                     , vector >= 0.12.0.1
